Change in color

--- a/style.css
+++ b/style.css
@@ -149,7 +149,7 @@ body {
 }
 
 .module-name {
-    background-color: #5d5959; /* Color gris claro */
+    background-color: #595959; /* Color gris claro */
     padding: 10px;
     border-radius: 5px;
     cursor: pointer;
