--- a/style.css
+++ b/style.css
@@ -102,17 +102,21 @@ body {
 
 .temario {
     margin-top: 20px; 
-    width: 100%;
-    max-width: 960px;
+    width: 90%;
+    max-width: 800px;
     margin: 20px auto;
     padding-top: 50px; 
-    background-color: rgba(0, 0, 0, 0.5); 
+    background-color: rgb(255, 252, 252); 
     padding-bottom: 50px;
     
 }
 
 .temario h2{
     text-align: center;
+    color:black;
+    font-weight: bold;
+    font-size: 30px;
+
 }
 
 .module-container {
@@ -122,8 +126,8 @@ body {
 }
 
 .module {
-    display: flex; /* Para alinear el botón y la info horizontalmente */
-    align-items: center; /* Centrar verticalmente */
+    display: flex; 
+    align-items: center; 
 }
 
 .button-module {
@@ -146,10 +150,12 @@ body {
     margin-left: 10px;
     flex-grow: 1; /* Permite que la info se expanda */
     width: 150px;
+    font-weight: bold;
+    font-size: 23px;
 }
 
 .module-name {
-    background-color: #5d5959; /* Color gris claro */
+    background-color: #fffefe; 
     padding: 10px;
     border-radius: 5px;
     cursor: pointer;
@@ -161,9 +167,12 @@ body {
 .module-description {
     display: none; /* Oculto inicialmente */
     padding: 10px;
-    border: 1px solid #ddd;
+    border: 1px solid #9e9b9bec;
     border-top: none;
     border-radius: 0 0 5px 5px;
+    color: black;
+    font-weight: normal;
+    font-size: 17px;
 }
 
 .flecha{
@@ -172,12 +181,12 @@ body {
 
 /* Media query para pantallas más pequeñas */
 @media (max-width: 768px) {
-    .modulos-container {
+    .module-container {
         grid-template-columns: repeat(1, 1fr); /* 2 columnas en pantallas medianas */
     }
 }
 @media (max-width: 500px) {
-    .modulos-container {
+    .module-container {
         grid-template-columns: repeat(1, 1fr); /* 1 columna en pantallas pequeñas */
     }
 }
