--- a/style.css
+++ b/style.css
@@ -22,9 +22,8 @@ body {
     text-align: center;
     background-color: rgba(0, 0, 0, 0.5);
     border-radius: 10px;
-    width: 95%;
+    width: 100%;
     min-height: 200px;
-    max-width: 980px;
     margin: 0 auto; 
     padding: 50px; 
     box-sizing: border-box; 
@@ -139,6 +138,7 @@ body {
     background-position: center;
     cursor: pointer;
     color: white; /* Color del texto del botón */
+    background-color: rgba(0, 0, 0, 0.5);
     font-weight: bold;
     font-size: 18px;
     display: flex;
