--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ body {
     min-height: 100vh;
     justify-content: center; /* ¡Centrado vertical en el body! */
     align-items: center;
+    background-color: rgba(0, 0, 0, 0.5); 
 }
 
 .container-g {
@@ -105,7 +106,7 @@ body {
     max-width: 800px;
     margin: 20px auto;
     padding-top: 50px; 
-    background-color: rgb(255, 252, 252); 
+    background-color: rgba(250, 250, 250, 128); 
     padding-bottom: 50px;
     
 }
