--- a/style.css
+++ b/style.css
@@ -106,7 +106,7 @@ body {
     max-width: 800px;
     margin: 20px auto;
     padding-top: 50px; 
-    background-color: rgba(250, 250, 250, 128); 
+    background-color: rgba(250, 250, 250, 0); 
     padding-bottom: 50px;
     
 }
@@ -127,7 +127,8 @@ body {
 
 .module {
     display: flex; 
-    align-items: center; 
+    align-items: center;
+    border-radius: 10px;
 }
 
 .button-module {
