Update style.css max-height removed

--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ body {
     margin: 0 auto; 
     padding: 50px; 
     box-sizing: border-box; 
-    max-height: 960px; 
+/*    max-height: 960px; */
 }
 
 .title {
