--- a/style.css
+++ b/style.css
@@ -1,13 +1,12 @@
 body {
     font-family: sans-serif;
-    color: white;
+    color: #CCCCCC;
     margin: 0;
     display: flex;
     flex-direction: column;
     min-height: 100vh;
     justify-content: center; /* ¡Centrado vertical en el body! */
     align-items: center;
-    background-color: rgba(0, 0, 0, 0.5); 
 }
 
 .container-g {
