--- a/style.css
+++ b/style.css
@@ -76,6 +76,16 @@ body {
     object-position: center;
 }
 
+.curse-description{
+    margin-top: 20px; 
+    width: 90%;
+    max-width: 800px;
+    margin: 20px auto;
+    padding-top: 50px; 
+    background-color: rgba(250, 250, 250, 0); 
+    padding-bottom: 50px;
+}
+
 
 .footer-content {
     display: flex;
