--- a/style.css
+++ b/style.css
@@ -84,6 +84,8 @@ body {
     padding-top: 50px; 
     background-color: rgba(250, 250, 250, 0); 
     padding-bottom: 50px;
+    font-family: sans-serif;
+    color: #333333;
 }
 
 
