--- a/style.css
+++ b/style.css
@@ -68,6 +68,7 @@ body {
 
 .profile-image {
     margin-right: 10px;
+    margin-left: 60px;
     width: 100px;
     height: 100px;
     border-radius: 50%;
