--- a/style.css
+++ b/style.css
@@ -86,6 +86,7 @@ body {
     background-color: rgba(250, 250, 250, 0); 
     padding-bottom: 50px;
     font-family: sans-serif;
+    font-size: 30px;
     color: #333333;
 }
 
