--- a/style.css
+++ b/style.css
@@ -33,7 +33,6 @@ body {
 .title {
     margin-bottom: 80vh; 
     padding: 20px;
-    font-size: 30px;
 }
 
 .text {
@@ -87,8 +86,14 @@ body {
     background-color: rgba(250, 250, 250, 0); 
     padding-bottom: 50px;
     font-family: sans-serif;
-    font-size: 30px;
     color: #333333;
+}
+.curse-description h2{
+    text-align: center;
+    color:black;
+    font-weight: bold;
+    font-size: 30px;
+
 }
 
 
