--- a/style.css
+++ b/style.css
@@ -4,7 +4,8 @@ body {
     margin: 0;
     display: flex;
     flex-direction: column;
-    min-height: 100vh;
+    /*min-height: 100vh;*/
+    flex-direction: column;
     
 }
 
@@ -14,7 +15,8 @@ body {
     background-repeat: no-repeat;
     width: 100%;
     
-    min-height: 100vh; 
+    /*min-height: 100vh;*/
+    flex-grow: 1;
     display: flex;
     flex-direction: column;
 }
